--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <!--CSS Normalize-->
         <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-        <title>Web Studio HW5</title>
+        <title>Web Studio HW6</title>
     </head>
     <body>
         <header class="container page-header">
@@ -240,6 +240,17 @@
                                 </svg>
                             </a>
                         </div>
+                    </div>
+                    <div class="footer-column">
+                        <p>Subscribe</p>
+                        <form>
+                            <input type="text" placeholder="E-mail" class="footer-input-subscribe">
+                            <button type="submit" class="footer-form-button">Subscribe
+                                <svg width="24" height="24" class="footer-subscribe-svg">
+                                    <use href="./images/icons.svg#send"></use>
+                                </svg>
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
