--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <!--CSS Normalize-->
         <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-        <title>Web Studio HW5</title>
+        <title>Web Studio HW6</title>
     </head>
     <body>  
         <header class="container page-header"> 
@@ -51,11 +51,55 @@
                 <button class="cta" type="button" data-modal-open>Order Service</button>
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
-                        <button type="button" class="modal-close" data-modal-close>
-                            <svg class="modal-close-icon" width="10" height="10">
-                                <use href="./images/icons.svg#close"></use>
-                            </svg>
-                        </button>
+                            <button type="button" class="modal-close" data-modal-close>
+                                <svg class="modal-close-icon" width="10" height="10">
+                                    <use href="./images/icons.svg#close"></use>
+                                </svg>
+                            </button>
+                            <h4 class="form-header">Leave your contacts and we will call you back</h4>
+                            <!--form-->
+                            <form>
+                                    <label class="form-label">
+                                        <span class="form-label-text">Name</span>
+                                        <input type="text" class="form-input" name="full_name" required />
+                                        <svg width="18" height="18" class="form-svg">
+                                            <use href="./images/icons.svg#person"></use>
+                                        </svg>
+                                    </label>
+                                    
+                                    <label class="form-label">
+                                        <span class="form-label-text">Phone</span>
+                                        <input type="tel" class="form-input" name="phone_num" required />
+                                        <svg width="18" height="18" class="form-svg">
+                                            <use href="./images/icons.svg#phone"></use>
+                                        </svg>
+                                    </label>
+
+                                    <label class="form-label">
+                                        <span class="form-label-text">Email</span>
+                                        <input type="email" class="form-input" name="email_add" required />
+                                        <svg width="18" height="18" class="form-svg">
+                                            <use href="./images/icons.svg#email"></use>
+                                        </svg>
+                                    </label>
+
+                                    <label class="form-label">
+                                        <span class="form-label-text">Comment</span>
+                                        <textarea name="comment" class="form-textarea" placeholder="Text input" required></textarea>
+                                    </label>
+
+                                    <label class="form-label-agree">
+                                        <input type="checkbox" name="agree" class="form-input-checkbox" required/>
+                                        <svg width="16" height="16" class="form-check-svg">
+                                            <use href="./images/icons.svg#checkbox"></use>
+                                        </svg>
+                                        <span class="form-agree-text">I accept the terms and conditions of the <a href="#" class="form-agree-link">Privacy Policy</a></span>
+                                    </label>
+
+                                    <div class="form-button-container">
+                                        <button type="submit" class="form-button-send">Send</button>
+                                    </div>
+                            </form>
                     </div>
                 </div>
             </section>
@@ -244,7 +288,7 @@
             <!--client section-->
             <section class="section">
                 <div>
-                    <h2>Customer</h2>
+                    <h2>Customers</h2>
                     <ul class="client-list links" >
                         <li>
                             <a class="client-link" href="#" target="_blank" rel="noopener noreferrer">
@@ -329,6 +373,17 @@
                                 </svg>
                             </a>
                         </div>
+                    </div>
+                    <div class="footer-column">
+                        <p>Subscribe</p>
+                        <form>
+                              <input type="text" placeholder="E-mail" class="footer-input-subscribe">
+                              <button  type="submit" class="footer-form-button">Subscribe
+                                    <svg width="24" height="24" class="footer-subscribe-svg">
+                                        <use href="./images/icons.svg#send"></use>
+                                    </svg>
+                              </button>
+                        </form>
                     </div>
                 </div>
             </div>
